# llm-general-backend

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  temp.py
app/: __init__.py  main.py
app/api/: llm.py  realtime_ws.py  stt.py  system.py  system_api.py  user.py  ws.py
app/config/: app_config.py  constant.py  default.py  voice_service_config.json
app/core/: chat_pipline.py  provider.py  strategy_selector.py
app/core/config/: voice_config.py
app/core/db/: db_history.py
app/core/funcall/: function_handler.py  tool_functions.py
app/core/funcall/source/: __init__.py  date_functions.py  test_functions.py
app/core/llm/: __init__.py  config.py  db_history.py  message.py
app/core/pipeline/: chat_process.py  function_process.py  summarize_process.py  text_process.py  voice_process.py
app/core/stt/: __init__.py  openai_strategy.py  stt_factory.py
app/core/tts/: __init__.py  edge_strategy.py  gsvi_tts_service.py  tts_factory.py  tts_service.py
app/core/ws/: audio_service.py  audio_websocket_client.py  realtime_voice_client.py  realtime_websocket_client.py  ws_tts.py  ws_tts_config.py  ws_utils.py
app/models/: chat.py  user.py
app/schemas/: response.py  user.py
app/utils/: database.py  log.py  stt.py  token_counter.py  user.py  verification_code_platform.py
examples/: realtime_voice_assistant.vue  tts_websocket_demo.html  voice_assistant_demo.vue
static/: index.html  voice_chat.html
